﻿v0.4.2
* Fixed: Vladmal Prime's Ancient Flames timer.
* Fixed: King Molinar's Consuming Essence now triggers correctly.
* Added: French Translation for Incorporeal Revenant trigger.
* Added: Estrode timer: Soul Capture.
* Added: Estrode timer: Mind Control.
----
v0.4.1
* Thanks to Dooc@Spross-Passage for German Translations
* Thanks to Céres@Brisesol for French Translations
* Added: German Translations for Options Window. 
* Added: German Translation for Hammerknell Fortress.
* Added: German Translations for the following bosses.
** Murdantix's mechanics, abilities and options.
** King Molinar's mechanics, abilities and options.
** Matron Zamira encounter recognition.
** Soulrender Zilas encounter recognition.
** Inwar Darktide encounter recognition.
----
v0.4.0
* New: Scroll bars added to Options Window.
* Change: Better looking, and size Options Button.
* Change: Bosses are now less sensitive to calling a wipe on you. 
* Added: New French translations to options window.
* Added: King Molinar Timer filters.
* Added: Prince Dollin Timer filters.
* Added: River of Souls Instance (Template)
* Added: ROS - Dark Foci (Template)
* Added: ROS - Warmaster Galenir (Template)
* Added: ROS - Plutonus the Immortal (Template)
* Added: ROS - Herald Gaurath (Template)
* Added: ROS - Alsbeth the Discordant (Template)
* Added: Greenscale's Blight Instance (Template)
* Added: GSB - Duke Letarues (Template)
* Added: GSB - Infiltrator Johlen (Template)
* Added: GSB - Oracle Aleria (Template)
* Added: GSB - Prince Hylas (Template)
* Added: GSB - Lord Greenscale (Template)
----
v0.3.9
* New!: There's now a basic button for the options screen, Rift Style.
* Note: The new button will be unlocked (right click to move) and centered.
* Added: French Translations for Timer/Enrage Timer.
* Added: French Translations for Timer/Enrage Timer Options.
----
v0.3.8
* New: Encounter Timer.
* New: Hard Enrage Timer.
* Added: French Translations to King Molinar casts