@@ -21,7 +21,7 @@ local AD = {
 	PhaseList = {},
 	Timers = {},
 	Lang = {},
-	Enrage = 60 * 11, 
+	Enrage = 60 * 19, 
 }
 
 AD.Alsbeth = {
